--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
 		"archiver": "^7.0.1",
 		"cors": "^2.8.5",
 		"cross-env": "^7.0.3",
+		"directory-tree": "^3.5.2",
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
 		"express-favicon": "^2.0.4",
-		"express-handlebars": "^8.0.1"
+		"express-handlebars": "^8.0.1",
+		"highlight.js": "^11.11.1"
 	}
 }
