--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"express": "^5.1.0",
 		"express-favicon": "^2.0.4",
 		"express-handlebars": "^8.0.1",
-		"highlight.js": "^11.11.1"
+		"highlight.js": "^11.11.1",
+		"highlightjs-line-numbers.js": "^2.9.0"
 	}
 }
