--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
 	"main": "index.js",
 	"type": "commonjs",
 	"scripts": {
-		"dev": "cross-env NODE_ENV=development nodemon index.js",
-		"format": "prettier . --write",
-		"start": "cross-env NODE_ENV=production node index.js"
+		"clean": "rimraf dist",
+		"start": "cd dist && cross-env NODE_ENV=production node ./server.js",
+		"build-be": "webpack --config ./webpack.config.be.js --mode=production",
+		"build-fe": "webpack --config ./webpack.config.fe.js --mode=production",
+		"build": "npm run clean && npm run build-fe && npm run build-be",
+		"dev": "cross-env NODE_ENV=development nodemon ./src/server.js"
 	},
 	"simple-git-hooks": {
 		"pre-commit": "npx pretty-quick --staged"
@@ -23,28 +26,36 @@
 		"@babel/core": "^7.27.3",
 		"@babel/preset-env": "^7.27.2",
 		"babel-loader": "^10.0.0",
+		"concurrently": "^9.1.2",
+		"copy-webpack-plugin": "^13.0.0",
 		"css-loader": "^7.1.2",
+		"css-minimizer-webpack-plugin": "^7.0.2",
+		"fs-extra": "^11.3.0",
 		"handlebars": "^4.7.8",
+		"handlebars-loader": "^1.7.3",
 		"html-bundler-webpack-plugin": "^4.20.2",
+		"html-webpack-plugin": "^5.6.3",
+		"mini-css-extract-plugin": "^2.9.2",
 		"nodemon": "^3.1.10",
+		"postcss-import": "^16.1.0",
+		"postcss-loader": "^8.1.1",
+		"postcss-preset-env": "^10.2.3",
 		"prettier": "3.5.3",
 		"pretty-quick": "^4.1.1",
 		"rimraf": "^6.0.1",
 		"simple-git-hooks": "^2.13.0",
 		"webpack": "^5.99.9",
 		"webpack-cli": "^6.0.1",
-		"webpack-dev-server": "^5.2.1"
+		"webpack-node-externals": "^3.0.0",
+		"webpack-shell-plugin-next": "^2.3.2"
 	},
 	"dependencies": {
 		"archiver": "^7.0.1",
-		"cors": "^2.8.5",
 		"cross-env": "^7.0.3",
-		"directory-tree": "^3.5.2",
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
 		"express-favicon": "^2.0.4",
 		"express-handlebars": "^8.0.1",
-		"highlight.js": "^11.11.1",
-		"highlightjs-line-numbers.js": "^2.9.0"
+		"highlight.js": "^11.11.1"
 	}
 }
