--- a/package.json
+++ b/package.json
@@ -51,11 +51,14 @@
 	},
 	"dependencies": {
 		"archiver": "^7.0.1",
+		"compression": "^1.8.0",
+		"cookie-parser": "^1.4.7",
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
 		"express-favicon": "^2.0.4",
 		"express-handlebars": "^8.0.1",
-		"highlight.js": "^11.11.1"
+		"highlight.js": "^11.11.1",
+		"i18n": "^0.15.1"
 	}
 }
