--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 	},
 	"dependencies": {
 		"archiver": "^7.0.1",
+		"chroma-js": "^3.1.2",
 		"compression": "^1.8.0",
 		"cookie-parser": "^1.4.7",
 		"cross-env": "^7.0.3",
@@ -59,6 +60,7 @@
 		"express-favicon": "^2.0.4",
 		"express-handlebars": "^8.0.1",
 		"highlight.js": "^11.11.1",
-		"i18n": "^0.15.1"
+		"i18n": "^0.15.1",
+		"jsonschema": "^1.5.0"
 	}
 }
